Update phase 2