@@ -12,9 +12,12 @@ import org.project.fraudruleapi.fraud.model.RuleDefinition;
 import org.project.fraudruleapi.fraud.model.TransactionDto;
 import org.project.fraudruleapi.rules.model.RuleDto;
 import org.project.fraudruleapi.shared.config.ApplicationConfiguration;
-import org.project.fraudruleapi.shared.enums.ConditionalType;
+import org.project.fraudruleapi.shared.enums.ChannelType;
+import org.project.fraudruleapi.shared.enums.ConditionType;
+import org.project.fraudruleapi.shared.enums.StatusType;
 import org.project.fraudruleapi.shared.enums.TransactionType;
 
+import java.time.LocalDateTime;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -29,23 +32,19 @@ class FraudEvaluatorTest {
 
     @BeforeEach
     void setUp() {
-        // Create real evaluators
         List<ConditionEvaluator> evaluators = List.of(
                 new EqualsEvaluator(),
-                new EqualEvaluator(),
                 new GreaterThanEvaluator(),
                 new GreaterThanOrEqualEvaluator(),
                 new LessThanEvaluator(),
                 new LessThanOrEqualEvaluator(),
                 new IncludeEvaluator(),
-                new NotEqualEvaluator(),
                 new NotEqualsEvaluator()
         );
 
         ConditionEvaluatorFactory factory = new ConditionEvaluatorFactory(evaluators);
         factory.init();
 
-        // Create config
         ApplicationConfiguration config = new ApplicationConfiguration();
         ApplicationConfiguration.FraudConfiguration fraudConfig = new ApplicationConfiguration.FraudConfiguration();
         ApplicationConfiguration.EvaluationConfig evaluationConfig = new ApplicationConfiguration.EvaluationConfig();
@@ -152,7 +151,7 @@ class FraudEvaluatorTest {
                 .transactionType(TransactionType.TRANSFER)
                 .build();
 
-        Condition cond = new Condition(ConditionalType.EQUAL, "transactionType", "transfer", null);
+        Condition cond = new Condition(ConditionType.EQUALS, "transactionType", "transfer", null);
 
         boolean result = fraudEvaluator.evaluateCondition(cond, tx);
 
@@ -165,7 +164,7 @@ class FraudEvaluatorTest {
                 .transactionType(TransactionType.P2P_PAYMENT)
                 .build();
 
-        Condition cond = new Condition(ConditionalType.EQUAL, "transactionType", "transfer", null);
+        Condition cond = new Condition(ConditionType.EQUALS, "transactionType", "transfer", null);
 
         boolean result = fraudEvaluator.evaluateCondition(cond, tx);
 
@@ -178,7 +177,7 @@ class FraudEvaluatorTest {
                 .transferAmount(1000.0D)
                 .build();
 
-        Condition cond = new Condition(ConditionalType.GREATER_THAN, "transferAmount", 100, null);
+        Condition cond = new Condition(ConditionType.GREATER_THAN, "transferAmount", 100, null);
 
         boolean result = fraudEvaluator.evaluateCondition(cond, tx);
 
@@ -191,7 +190,7 @@ class FraudEvaluatorTest {
                 .currency("USD")
                 .build();
 
-        Condition cond = new Condition(ConditionalType.INCLUDE, "currency", List.of("USD", "EUR"), null);
+        Condition cond = new Condition(ConditionType.INCLUDE, "currency", List.of("USD", "EUR"), null);
 
         boolean result = fraudEvaluator.evaluateCondition(cond, tx);
 
@@ -205,15 +204,15 @@ class FraudEvaluatorTest {
                 .currency("USD")
                 .build();
 
-        Condition cond1 = new Condition(ConditionalType.GREATER_THAN, "transferAmount", 100, null);
-        Condition cond2 = new Condition(ConditionalType.EQUAL, "currency", "USD", null);
-        Condition andCond = new Condition(ConditionalType.AND, null, null, List.of(cond1, cond2));
+        Condition cond1 = new Condition(ConditionType.GREATER_THAN, "transferAmount", 100, null);
+        Condition cond2 = new Condition(ConditionType.EQUALS, "currency", "USD", null);
+        Condition andCond = new Condition(ConditionType.AND, null, null, List.of(cond1, cond2));
 
         boolean result = fraudEvaluator.evaluateCondition(andCond, tx);
 
         assertThat(result).isTrue();
 
-        Condition notCond = new Condition(ConditionalType.NOT, null, null, List.of(cond2));
+        Condition notCond = new Condition(ConditionType.NOT, null, null, List.of(cond2));
         boolean notResult = fraudEvaluator.evaluateCondition(notCond, tx);
         assertThat(notResult).isFalse();
     }
@@ -221,75 +220,74 @@ class FraudEvaluatorTest {
 
     @Test
     void testEqualsOperator_StringMatch() {
-        Condition cond = new Condition(ConditionalType.EQUAL, "transactionType", "TRANSFER", null);
+        Condition cond = new Condition(ConditionType.EQUALS, "transactionType", "TRANSFER", null);
         assertTrue(fraudEvaluator.evaluateCondition(cond, transactionDto));
     }
 
     @Test
     void testEqualsOperator_NumberMatch() {
-        Condition cond = new Condition(ConditionalType.EQUAL, "transferAmount", 1000.0, null);
+        Condition cond = new Condition(ConditionType.EQUALS, "transferAmount", 1000.0, null);
         assertTrue(fraudEvaluator.evaluateCondition(cond, transactionDto));
     }
 
     @Test
     void testGreaterThan() {
-        Condition cond = new Condition(ConditionalType.GREATER_THAN, "transferAmount", 500, null);
+        Condition cond = new Condition(ConditionType.GREATER_THAN, "transferAmount", 500, null);
         assertTrue(fraudEvaluator.evaluateCondition(cond, transactionDto));
     }
 
     @Test
     void testLessThanOrEqual() {
-        Condition cond = new Condition(ConditionalType.LESS_THAN_OR_EQUAL, "transferAmount", 1000.0, null);
+        Condition cond = new Condition(ConditionType.LESS_THAN_OR_EQUAL, "transferAmount", 1000.0, null);
         assertTrue(fraudEvaluator.evaluateCondition(cond, transactionDto));
     }
 
     @Test
     void testIncludeOperator() {
-        Condition cond = new Condition(ConditionalType.INCLUDE, "currency", List.of("USD", "ZAR"), null);
+        Condition cond = new Condition(ConditionType.INCLUDE, "currency", List.of("USD", "ZAR"), null);
         assertTrue(fraudEvaluator.evaluateCondition(cond, transactionDto));
     }
 
     @Test
     void testAndOperator() {
-        Condition cond1 = new Condition(ConditionalType.EQUAL, "transactionType", "TRANSFER", null);
-        Condition cond2 = new Condition(ConditionalType.GREATER_THAN, "transferAmount", 500, null);
-        Condition and = new Condition(ConditionalType.AND, null, null, List.of(cond1, cond2));
+        Condition cond1 = new Condition(ConditionType.EQUALS, "transactionType", "TRANSFER", null);
+        Condition cond2 = new Condition(ConditionType.GREATER_THAN, "transferAmount", 500, null);
+        Condition and = new Condition(ConditionType.AND, null, null, List.of(cond1, cond2));
 
         assertTrue(fraudEvaluator.evaluateCondition(and, transactionDto));
     }
 
     @Test
     void testOrOperator() {
-        Condition cond1 = new Condition(ConditionalType.EQUAL, "transactionType", "DEPOSIT", null);
-        Condition cond2 = new Condition(ConditionalType.EQUAL, "currency", "USD", null);
-        Condition or = new Condition(ConditionalType.OR, null, null, List.of(cond1, cond2));
+        Condition cond1 = new Condition(ConditionType.EQUALS, "transactionType", "DEPOSIT", null);
+        Condition cond2 = new Condition(ConditionType.EQUALS, "currency", "USD", null);
+        Condition or = new Condition(ConditionType.OR, null, null, List.of(cond1, cond2));
 
         assertTrue(fraudEvaluator.evaluateCondition(or, transactionDto));
     }
 
     @Test
     void testNotOperator() {
-        Condition cond = new Condition(ConditionalType.NOT, null, null,
-                List.of(new Condition(ConditionalType.EQUAL, "currency", "ZAR", null)));
+        Condition cond = new Condition(ConditionType.NOT, null, null,
+                List.of(new Condition(ConditionType.EQUALS, "currency", "ZAR", null)));
 
         assertTrue(fraudEvaluator.evaluateCondition(cond, transactionDto));
     }
 
     @Test
     void testInvalidNumericThrows() {
-        Condition cond = new Condition(ConditionalType.GREATER_THAN, "transactionType", "ABC", null);
+        Condition cond = new Condition(ConditionType.GREATER_THAN, "transactionType", "ABC", null);
         assertThrows(IllegalArgumentException.class, () -> fraudEvaluator.evaluateCondition(cond, transactionDto));
     }
 
     @Test
     void testMissingFieldReturnsNull() {
-        Condition cond = new Condition(ConditionalType.EQUAL, "nonexistentField", "value", null);
+        Condition cond = new Condition(ConditionType.EQUALS, "nonexistentField", "value", null);
         assertFalse(fraudEvaluator.evaluateCondition(cond, transactionDto));
     }
 
     @Test
     void testParallelEvaluation() {
-        // Set threshold to 1 to trigger parallel
         ApplicationConfiguration config = new ApplicationConfiguration();
         ApplicationConfiguration.FraudConfiguration fraudConfig = new ApplicationConfiguration.FraudConfiguration();
         ApplicationConfiguration.EvaluationConfig evaluationConfig = new ApplicationConfiguration.EvaluationConfig();
@@ -300,13 +298,11 @@ class FraudEvaluatorTest {
 
         ConditionEvaluatorFactory factory = new ConditionEvaluatorFactory(List.of(
                 new EqualsEvaluator(),
-                new EqualEvaluator(),
                 new GreaterThanEvaluator(),
                 new GreaterThanOrEqualEvaluator(),
                 new LessThanEvaluator(),
                 new LessThanOrEqualEvaluator(),
                 new IncludeEvaluator(),
-                new NotEqualEvaluator(),
                 new NotEqualsEvaluator()
         ));
         factory.init();
@@ -318,28 +314,28 @@ class FraudEvaluatorTest {
                         .id("rule1")
                         .name("Rule 1")
                         .description("Test rule 1")
-                        .condition(new Condition(ConditionalType.EQUAL, "transferAmount", 1000.0, null))
+                        .condition(new Condition(ConditionType.EQUALS, "transferAmount", 1000.0, null))
                         .build(),
                 RuleDefinition.builder()
                         .id("rule2")
                         .name("Rule 2")
                         .description("Test rule 2")
-                        .condition(new Condition(ConditionalType.EQUAL, "transferAmount", 2000.0, null))
+                        .condition(new Condition(ConditionType.EQUALS, "transferAmount", 2000.0, null))
                         .build()
         );
 
         List<EvaluationResult> results = parallelEvaluator.evaluateAllRules(rules, transactionDto);
 
         assertThat(results).hasSize(1);
-        assertThat(results.get(0).ruleId()).isEqualTo("rule1");
+        assertThat(results.getFirst().ruleId()).isEqualTo("rule1");
     }
 
     @Test
     void testAndCondition() {
-        Condition andCond = new Condition(ConditionalType.AND, null, null,
+        Condition andCond = new Condition(ConditionType.AND, null, null,
                 List.of(
-                        new Condition(ConditionalType.EQUAL, "transferAmount", 1000.0, null),
-                        new Condition(ConditionalType.EQUAL, "currency", "USD", null)
+                        new Condition(ConditionType.EQUALS, "transferAmount", 1000.0, null),
+                        new Condition(ConditionType.EQUALS, "currency", "USD", null)
                 ));
 
         assertTrue(fraudEvaluator.evaluateCondition(andCond, transactionDto));
@@ -347,10 +343,10 @@ class FraudEvaluatorTest {
 
     @Test
     void testOrCondition() {
-        Condition orCond = new Condition(ConditionalType.OR, null, null,
+        Condition orCond = new Condition(ConditionType.OR, null, null,
                 List.of(
-                        new Condition(ConditionalType.EQUAL, "transferAmount", 1000.0, null),
-                        new Condition(ConditionalType.EQUAL, "transferAmount", 2000.0, null)
+                        new Condition(ConditionType.EQUALS, "transferAmount", 1000.0, null),
+                        new Condition(ConditionType.EQUALS, "transferAmount", 2000.0, null)
                 ));
 
         assertTrue(fraudEvaluator.evaluateCondition(orCond, transactionDto));
@@ -358,27 +354,199 @@ class FraudEvaluatorTest {
 
     @Test
     void testNotCondition() {
-        Condition notCond = new Condition(ConditionalType.NOT, null, null,
-                List.of(new Condition(ConditionalType.EQUAL, "transferAmount", 2000.0, null)));
+        Condition notCond = new Condition(ConditionType.NOT, null, null,
+                List.of(new Condition(ConditionType.EQUALS, "transferAmount", 2000.0, null)));
 
         assertTrue(fraudEvaluator.evaluateCondition(notCond, transactionDto));
     }
 
     @Test
     void testEmptyAndCondition() {
-        Condition andCond = new Condition(ConditionalType.AND, null, null, List.of());
+        Condition andCond = new Condition(ConditionType.AND, null, null, List.of());
         assertTrue(fraudEvaluator.evaluateCondition(andCond, transactionDto));
     }
 
     @Test
     void testEmptyOrCondition() {
-        Condition orCond = new Condition(ConditionalType.OR, null, null, List.of());
+        Condition orCond = new Condition(ConditionType.OR, null, null, List.of());
         assertFalse(fraudEvaluator.evaluateCondition(orCond, transactionDto));
     }
 
     @Test
     void testEmptyNotCondition() {
-        Condition notCond = new Condition(ConditionalType.NOT, null, null, List.of());
+        Condition notCond = new Condition(ConditionType.NOT, null, null, List.of());
         assertTrue(fraudEvaluator.evaluateCondition(notCond, transactionDto));
+    }
+
+    private final TransactionDto tx = new TransactionDto(
+            "tx1", 1L, 10L, "USD", 750000.0,
+            LocalDateTime.now(), TransactionType.WIRE_TRANSFER,
+            ChannelType.WEB, "M001", "Crypto Exchange",
+            200L, "192.168.1.50", "device1", "New York",
+            StatusType.PENDING
+    );
+
+    @Test
+    void between_shouldReturnTrue_whenValueInRange() {
+        var evaluator = new BetweenEvaluator();
+        assertThat(evaluator.getSupportedType()).isEqualTo(ConditionType.BETWEEN);
+        var cond = new Condition(ConditionType.BETWEEN, "transferAmount", List.of(500000, 1000000), null);
+        assertTrue(evaluator.evaluate(cond, tx));
+    }
+
+    @Test
+    void between_shouldReturnFalse_whenValueOutOfRange() {
+        var evaluator = new BetweenEvaluator();
+        var cond = new Condition(ConditionType.BETWEEN, "transferAmount", List.of(800000, 1000000), null);
+        assertFalse(evaluator.evaluate(cond, tx));
+    }
+
+    @Test
+    void between_shouldReturnTrue_whenValueEqualsMin() {
+        var evaluator = new BetweenEvaluator();
+        var cond = new Condition(ConditionType.BETWEEN, "transferAmount", List.of(750000, 1000000), null);
+        assertTrue(evaluator.evaluate(cond, tx));
+    }
+
+    @Test
+    void between_shouldReturnTrue_whenValueEqualsMax() {
+        var evaluator = new BetweenEvaluator();
+        var cond = new Condition(ConditionType.BETWEEN, "transferAmount", List.of(500000, 750000), null);
+        assertTrue(evaluator.evaluate(cond, tx));
+    }
+
+    @Test
+    void between_shouldThrow_whenNullField() {
+        var evaluator = new BetweenEvaluator();
+        var cond = new Condition(ConditionType.BETWEEN, "nonExistentField", List.of(1, 2), null);
+        assertThrows(IllegalArgumentException.class, () -> evaluator.evaluate(cond, tx));
+    }
+
+    @Test
+    void between_shouldThrow_whenWrongRangeSize() {
+        var evaluator = new BetweenEvaluator();
+        var cond = new Condition(ConditionType.BETWEEN, "transferAmount", List.of(1), null);
+        assertThrows(IllegalArgumentException.class, () -> evaluator.evaluate(cond, tx));
+    }
+
+    @Test
+    void between_shouldThrow_whenValueNotList() {
+        var evaluator = new BetweenEvaluator();
+        var cond = new Condition(ConditionType.BETWEEN, "transferAmount", "notAList", null);
+        assertThrows(IllegalArgumentException.class, () -> evaluator.evaluate(cond, tx));
+    }
+
+    @Test
+    void regex_shouldReturnTrue_whenMatches() {
+        var evaluator = new RegexEvaluator();
+        assertThat(evaluator.getSupportedType()).isEqualTo(ConditionType.REGEX);
+        var cond = new Condition(ConditionType.REGEX, "ipAddress", "192\\.168\\..*", null);
+        assertTrue(evaluator.evaluate(cond, tx));
+    }
+
+    @Test
+    void regex_shouldReturnFalse_whenNoMatch() {
+        var evaluator = new RegexEvaluator();
+        var cond = new Condition(ConditionType.REGEX, "ipAddress", "10\\.0\\..*", null);
+        assertFalse(evaluator.evaluate(cond, tx));
+    }
+
+    @Test
+    void regex_shouldReturnFalse_whenNullField() {
+        var evaluator = new RegexEvaluator();
+        var txNull = TransactionDto.builder().build();
+        var cond = new Condition(ConditionType.REGEX, "ipAddress", ".*", null);
+        assertFalse(evaluator.evaluate(cond, txNull));
+    }
+
+    @Test
+    void regex_shouldReturnFalse_whenInvalidPattern() {
+        var evaluator = new RegexEvaluator();
+        var cond = new Condition(ConditionType.REGEX, "ipAddress", "[invalid", null);
+        assertFalse(evaluator.evaluate(cond, tx));
+    }
+
+    @Test
+    void regex_shouldReturnFalse_whenPatternTooLong() {
+        var evaluator = new RegexEvaluator();
+        String longPattern = "a".repeat(300);
+        var cond = new Condition(ConditionType.REGEX, "ipAddress", longPattern, null);
+        assertFalse(evaluator.evaluate(cond, tx));
+    }
+
+    @Test
+    void startsWith_shouldReturnTrue_whenMatches() {
+        var evaluator = new StartsWithEvaluator();
+        assertThat(evaluator.getSupportedType()).isEqualTo(ConditionType.STARTS_WITH);
+        var cond = new Condition(ConditionType.STARTS_WITH, "ipAddress", "192.168.", null);
+        assertTrue(evaluator.evaluate(cond, tx));
+    }
+
+    @Test
+    void startsWith_shouldReturnFalse_whenNoMatch() {
+        var evaluator = new StartsWithEvaluator();
+        var cond = new Condition(ConditionType.STARTS_WITH, "ipAddress", "10.", null);
+        assertFalse(evaluator.evaluate(cond, tx));
+    }
+
+    @Test
+    void startsWith_shouldReturnFalse_whenNullField() {
+        var evaluator = new StartsWithEvaluator();
+        var txNull = TransactionDto.builder().build();
+        var cond = new Condition(ConditionType.STARTS_WITH, "ipAddress", "10.", null);
+        assertFalse(evaluator.evaluate(cond, txNull));
+    }
+
+    @Test
+    void endsWith_shouldReturnTrue_whenMatches() {
+        var evaluator = new EndsWithEvaluator();
+        assertThat(evaluator.getSupportedType()).isEqualTo(ConditionType.ENDS_WITH);
+        var cond = new Condition(ConditionType.ENDS_WITH, "currency", "SD", null);
+        assertTrue(evaluator.evaluate(cond, tx));
+    }
+
+    @Test
+    void endsWith_shouldReturnFalse_whenNoMatch() {
+        var evaluator = new EndsWithEvaluator();
+        var cond = new Condition(ConditionType.ENDS_WITH, "currency", "AR", null);
+        assertFalse(evaluator.evaluate(cond, tx));
+    }
+
+    @Test
+    void endsWith_shouldReturnFalse_whenNullField() {
+        var evaluator = new EndsWithEvaluator();
+        var txNull = TransactionDto.builder().build();
+        var cond = new Condition(ConditionType.ENDS_WITH, "currency", "SD", null);
+        assertFalse(evaluator.evaluate(cond, txNull));
+    }
+
+    @Test
+    void contains_shouldReturnTrue_whenMatches() {
+        var evaluator = new ContainsEvaluator();
+        assertThat(evaluator.getSupportedType()).isEqualTo(ConditionType.CONTAINS);
+        var cond = new Condition(ConditionType.CONTAINS, "merchantName", "crypto", null);
+        assertTrue(evaluator.evaluate(cond, tx));
+    }
+
+    @Test
+    void contains_shouldReturnTrue_caseInsensitive() {
+        var evaluator = new ContainsEvaluator();
+        var cond = new Condition(ConditionType.CONTAINS, "merchantName", "CRYPTO", null);
+        assertTrue(evaluator.evaluate(cond, tx));
+    }
+
+    @Test
+    void contains_shouldReturnFalse_whenNoMatch() {
+        var evaluator = new ContainsEvaluator();
+        var cond = new Condition(ConditionType.CONTAINS, "merchantName", "gambling", null);
+        assertFalse(evaluator.evaluate(cond, tx));
+    }
+
+    @Test
+    void contains_shouldReturnFalse_whenNullField() {
+        var evaluator = new ContainsEvaluator();
+        var txNull = TransactionDto.builder().build();
+        var cond = new Condition(ConditionType.CONTAINS, "merchantName", "test", null);
+        assertFalse(evaluator.evaluate(cond, txNull));
     }
 }
